Splashscreen and Login UI

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,78 +17,84 @@
             android:background="@drawable/bg_inputtext"
             android:orientation="vertical">
 
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="Username" />-->
-
-<!--            <EditText-->
-<!--                android:id="@+id/username"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:padding="10dp"-->
-<!--                android:drawableLeft="@drawable/ic_baseline_person_24"-->
-<!--                android:drawablePadding="8dp"-->
-<!--                android:ems="10"-->
-<!--                android:inputType="text" />-->
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/username"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-light"
-                    android:textColorHint="@color/white"
-                    app:boxStrokeColor="@color/white"
-                    android:hint="Username"
-                    android:drawableRight="@drawable/ic_baseline_person_24"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:textSize="18sp" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:passwordToggleEnabled="true">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/password"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-light"
-                    android:textColorHint="@color/white"
-                    app:boxStrokeColor="@color/white"
-                    android:hint="Password"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:textSize="18sp" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <Button
-                android:id="@+id/login_button"
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Login" />
+                android:textColor="@color/white"
+                android:text="Username" />
 
-            <!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="Password" />-->
+            <EditText
+                android:id="@+id/username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:padding="10dp"
+                android:background="@drawable/bg_inputtext"
+                android:drawableLeft="@drawable/ic_baseline_person_24"
+                android:drawablePadding="8dp"
+                android:ems="10"
+                android:inputType="text" />
 
-<!--            <EditText-->
-<!--                android:id="@+id/password"-->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:text="Password" />
+
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:padding="10dp"
+                android:background="@drawable/bg_inputtext"
+                android:drawableLeft="@drawable/ic_baseline_lock_24"
+                android:drawablePadding="8dp"
+                android:ems="10"
+                android:inputType="textPassword" />
+
+<!--            <com.google.android.material.textfield.TextInputLayout-->
 <!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:padding="10dp"-->
-<!--                android:background="@drawable/bg_inputtext"-->
-<!--                android:drawableLeft="@drawable/ic_baseline_lock_24"-->
-<!--                android:drawablePadding="8dp"-->
-<!--                android:ems="10"-->
-<!--                android:inputType="textPassword" />-->
+<!--                android:layout_height="match_parent">-->
+
+<!--                <com.google.android.material.textfield.TextInputEditText-->
+<!--                    android:id="@+id/username"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:fontFamily="sans-serif-light"-->
+<!--                    android:textColorHint="@color/white"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    app:boxStrokeColor="@color/white"-->
+<!--                    android:hint="Username"-->
+<!--                    android:drawableRight="@drawable/ic_baseline_person_24"-->
+<!--                    android:maxLines="1"-->
+<!--                    android:singleLine="true"-->
+<!--                    android:textSize="18sp" />-->
+<!--            </com.google.android.material.textfield.TextInputLayout>-->
+
+<!--            <com.google.android.material.textfield.TextInputLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                app:passwordToggleEnabled="true">-->
+
+<!--                <com.google.android.material.textfield.TextInputEditText-->
+<!--                    android:id="@+id/password"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:fontFamily="sans-serif-light"-->
+<!--                    android:textColorHint="@color/white"-->
+<!--                    app:boxStrokeColor="@color/white"-->
+<!--                    android:hint="Password"-->
+<!--                    android:maxLines="1"-->
+<!--                    android:singleLine="true"-->
+<!--                    android:textSize="18sp" />-->
+<!--            </com.google.android.material.textfield.TextInputLayout>-->
+
+        <Button
+            android:id="@+id/login_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Login" />
         </LinearLayout>
 
 </RelativeLayout>
